tests/ui/parser/misspelled-keywords/let-else.stderr
error: expected one of `.`, `;`, `?`, `else`, or an operator, found `elze`
  --> $DIR/let-else.rs:2:28
   |
LL |     let Some(a) = Some(10) elze {}
   |                            ^^^^ expected one of `.`, `;`, `?`, `else`, or an operator

error: aborting due to 1 previous error

