tests/ui/parser/misspelled-keywords/let-else.rs
fn main() {
    let Some(a) = Some(10) elze {}
    //~^ ERROR expected one of
}
